--- a/genetic-algorithm/config.properties
+++ b/genetic-algorithm/config.properties
@@ -1,6 +1,8 @@
 # Los parametros sin usar con valores seteados no se tendran en cuenta, se pueden dejar
 # sin cambios.
 #
+# Fitness function // 1. Archer | 2. Defender | 3. Spy | 4. Warrior
+fitnessFunction=4
 # Cruces // 1. Un punto | 2. Dos puntos | 3. Anular | 4. Uniforme
 crossover=1
 
@@ -33,7 +35,7 @@ mutationProbability=0.6
 # 3. Solucion aceptable / Paramtros: cutParameter = fitness aceptable
 # 4. Contenido / Paramtros: cutParameter = cantidad de generaciones | cutParamter2 = error
 # 5. Estructural / Paramtros: cutParameter = cantidad de generaciones | cutParamter2 = porcentaje de cambio
-cutMethod=4
-cutParameter=5
+cutMethod=1
+cutParameter=10
 cutParameter2=0.005
 
