--- a/genetic-algorithm/config.properties
+++ b/genetic-algorithm/config.properties
@@ -7,12 +7,15 @@ fitnessFunction=4
 crossover=1
 
 # Seleccion // 1. Fill all | 2. Fill parent
-# Parametros: (a, b) ndeahhq ue son xd
 selection=1
-a = 1
+
+# Porcentaje de funcion de reemplazo de individuos numero uno.
 b = 1
 
-# Funcion de seleccion
+# Porcentaje de funcion de seleccion de padres numero uno.
+a = 1
+
+# Funcion de seleccion de padres
 # 1. Boltzmann / Parametros: selectionParamter = T0 | selectionParamter2 = TC | selectionParamter3 = k
 # 2. Torneo deterministico / Parametros: selectionParamter = M
 # 3. Elite
@@ -24,6 +27,27 @@ selectionFunction=1
 selectionParameter=1
 selectionParameter2=1
 selectionParameter3=1
+
+# Segunda funcion de seleccion de padres
+# Igual que el anterior, con distintos nombres en las variables.
+secondSelectionFunction=1
+secondSelectionParameter=1
+secondSelectionParameter2=1
+secondSelectionParameter3=1
+
+# Funcion de reemplazo de individuos
+# Igual que el anterior, con distintos nombres en las variables.
+replacementFunction=1
+replacementParameter=1
+replacementParameter2=1
+replacementParameter3=1
+
+# Segunda funcion de reemplazo de individuos
+# Igual que el anterior, con distintos nombres en las variables.
+secondReplacementnFunction=1
+secondReplacementParameter=1
+secondReplacementParameter2=1
+secondReplacementParameter3=1
 
 # Mutacion // 1. Gen simple | 2. Multigen limitada | 3. Multigen uniforme | 4. Completa
 mutation=3
@@ -38,4 +62,3 @@ mutationProbability=0.6
 cutMethod=1
 cutParameter=10
 cutParameter2=0.005
-
