--- a/genetic-algorithm/config.properties
+++ b/genetic-algorithm/config.properties
@@ -1,7 +1,11 @@
 # Los parametros sin usar con valores seteados no se tendran en cuenta, se pueden dejar
 # sin cambios.
 #
-# Fitness function // 1. Archer | 2. Defender | 3. Spy | 4. Warrior
+# Cantidad de individuos
+population=500
+# Cantidad de hijos
+childrenAmount=500
+# Funcion fitness // 1. Archer | 2. Defender | 3. Spy | 4. Warrior
 fitnessFunction=4
 # Cruces // 1. Un punto | 2. Dos puntos | 3. Anular | 4. Uniforme
 crossover=1
@@ -10,10 +14,10 @@ crossover=1
 selection=1
 
 # Porcentaje de funcion de reemplazo de individuos numero uno.
-b = 1
+b = 0.5
 
 # Porcentaje de funcion de seleccion de padres numero uno.
-a = 1
+a = 0.5
 
 # Funcion de seleccion de padres
 # 1. Boltzmann / Parametros: selectionParamter = T0 | selectionParamter2 = TC | selectionParamter3 = k
@@ -23,35 +27,35 @@ a = 1
 # 5. Ruleta
 # 6. Torneo probabilistico
 # 7. Universal
-selectionFunction=1
+selectionFunction=3
 selectionParameter=1
 selectionParameter2=1
 selectionParameter3=1
 
 # Segunda funcion de seleccion de padres
 # Igual que el anterior, con distintos nombres en las variables.
-secondSelectionFunction=1
+secondSelectionFunction=4
 secondSelectionParameter=1
 secondSelectionParameter2=1
 secondSelectionParameter3=1
 
 # Funcion de reemplazo de individuos
 # Igual que el anterior, con distintos nombres en las variables.
-replacementFunction=1
+replacementFunction=5
 replacementParameter=1
 replacementParameter2=1
 replacementParameter3=1
 
 # Segunda funcion de reemplazo de individuos
 # Igual que el anterior, con distintos nombres en las variables.
-secondReplacementFunction=1
+secondReplacementFunction=6
 secondReplacementParameter=1
 secondReplacementParameter2=1
 secondReplacementParameter3=1
 
 # Mutacion // 1. Gen simple | 2. Multigen limitada | 3. Multigen uniforme | 4. Completa
-mutation=3
-mutationProbability=0.6
+mutation=1
+mutationProbability=1
 
 # Cirterio de corte //
 # 1. Tiempo / Parametros: cutParameter = tiempo de corte.
@@ -59,6 +63,6 @@ mutationProbability=0.6
 # 3. Solucion aceptable / Paramtros: cutParameter = fitness aceptable
 # 4. Contenido / Paramtros: cutParameter = cantidad de generaciones | cutParamter2 = error
 # 5. Estructural / Paramtros: cutParameter = cantidad de generaciones | cutParamter2 = porcentaje de cambio
-cutMethod=1
-cutParameter=10
-cutParameter2=0.005
+cutMethod=4
+cutParameter=6
+cutParameter2=0.05
